Update to include my info

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/style.css" />
-    <title>YOUR NAME</title>
+    <title>Jessica Lee</title>
     <meta name="description" content="some desc">
   </head>
 
@@ -14,17 +14,19 @@
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="assets/profile.png" height="200" width="200">
+      <img class="about-prof-image" src="assets/Jessica Lee headshot.jpg" height="200" width="200">
       <p>
-        Introduce Yourself
+        Hi, I'm Jessica and I am a junior majoring in computer science and minoring in ACES at UMD.
       </p>
 
       <p>
-        Relevant Info
+        Relevant Info:
+        I am currently taking the following CS courses: CMSC451, CMSC414, CMSC320, CMSC389T
       </p>
 
       <p>
-        Your Interests
+        Interests:
+        My hobbies include juggling and biking.
       </p>
 
       <br><br><br><br><br><br><br><br><br><br><br>
@@ -35,13 +37,13 @@
         <ul class="nav footer-nav">
           <li>
             <!-- YOUR GITHUB -->
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/jlee882" target="_blank">
               <img class="sm-logo" src="assets/githubwhite.png" height="50" width="50">
             </a>
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a href="https://www.linkedin.com/in/jessicalee1298/" target="_blank">
               <img class="sm-logo" src="assets/linkedinwhite.png" height="50" width="50">
 
             </a>
